--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 }
 
 body {
+    padding-top: 40px;
     display: flex;
     justify-content: center;
     position: relative;
@@ -79,4 +80,5 @@ li:hover a {
 
 li:last-child::after {
     box-shadow: -120px 120px 20px rgba(0, 0, 0, 0.25);
+
 }
